@@ -25,11 +25,9 @@ import bisq.persistence.PersistenceService;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.TimeUnit;
 
 @Slf4j
 @Getter
@@ -56,7 +54,6 @@ public class BitcoinWalletService extends AbstractBitcoindWalletService<BitcoinW
     private final Persistence<BitcoinWalletStore> persistence;
     private final Observable<Coin> balance = new Observable<>(Coin.asBtcFromValue(0));
     private final Observable<Boolean> isWalletInitialized = new Observable<>(true);
-    private final Observable<Boolean> isWalletBackedUp = new Observable<>(true);
 
     public BitcoinWalletService(Config config,
                                 PersistenceService persistenceService) {
@@ -82,21 +79,6 @@ public class BitcoinWalletService extends AbstractBitcoindWalletService<BitcoinW
     }
 
     @Override
-    public Observable<Boolean> getIsWalletInitialized() {
-        return isWalletInitialized;
-    }
-
-    @Override
-    public Observable<Boolean> getIsWalletBackedup() {
-        return isWalletBackedUp;
-    }
-
-    @Override
-    public void setIsWalletBackedup(Boolean value) {
-        isWalletBackedUp.set(value);
-    }
-
-    @Override
     public CompletableFuture<Coin> requestBalance() {
         return wallet.map(bitcoinWallet -> CompletableFuture.supplyAsync(() -> {
             double balance = bitcoinWallet.getBalance();
@@ -107,27 +89,13 @@ public class BitcoinWalletService extends AbstractBitcoindWalletService<BitcoinW
     }
 
     @Override
-    public void setNoEncryption() {
-
+    public void encryptWallet(String password) {
+        // Not implemented yet
     }
 
-    @Override
-    public void setEncryptionPassword(String password) {
-        log.debug("setEncryptionPassword called ");
-    }
-
-    // TODO
     @Override
     public CompletableFuture<List<String>> getSeedWords() {
-        return CompletableFuture.supplyAsync(() ->
-                        Arrays.asList("car", "van", "lion", "water", "bero", "cycle",
-                                "love", "key", "system", "wife", "husband", "trade"),
-                CompletableFuture.delayedExecutor(400, TimeUnit.MILLISECONDS)
-        );
-    }
-
-    @Override
-    public void purgeSeedWords() {
-
+        // Not implemented yet
+        return CompletableFuture.completedFuture(List.of());
     }
 }
